button align, search highlighting fix

--- a/src/header/index.styl
+++ b/src/header/index.styl
@@ -2,9 +2,10 @@
 
 
 header
-	height 60px
-	margin 20px auto 30px
-	padding 0 10px
+	height 60
+	width 90%
+	margin 20 auto 30
+	padding 0 10
 	font-size 13px
 	text-align center
 	font-weight normal
@@ -12,7 +13,6 @@ header
 	display flex
 	align-items center
 	justify-content center
-	width 90%
 	max-width var(--grid-max-width, 1000px)
 
 	.title
@@ -20,22 +20,20 @@ header
 
 
 .btn-back
-	left 10px
+	left 10
 
 .btn-back svg
-	height 16px
-	width 16px
-	margin 3px 0 0 -1px
+	size 16
+	margin 3 0 0 -1
 
 
 .btn-search
 	position absolute
-	top 45px
-	right 3px
+	top 45
+	right 7
 	z-index 9
-	border-radius 25px
+	border-radius 25
 
 .btn-search svg
-	height 20px
-	width 20px
-	margin 3px 0 0 -2px
+	size 20
+	margin 3 0 0 -2
